# fac-haskell-workshop

./: .gitignore  Main.hs  README.md  fac-workshop.cabal  stack.yaml
